# JiPP2

./: .gitignore  CMakeLists.txt
FinalProject/: CMakeLists.txt
FinalProject/include/: Album.h  Csv.h  Ebook.h  Episode.h  LibraryContainer.h  MediaElement.h  Movie.h  Song.h  User.h  UserContainer.h  colors.h  menu.h
FinalProject/src/: Album.cpp  Csv.cpp  Ebook.cpp  Episode.cpp  LibraryContainer.cpp  MediaElement.cpp  Movie.cpp  Song.cpp  User.cpp  UserContainer.cpp  colors.cpp  main.cpp  menu.cpp
allocation_basics/: CMakeLists.txt
allocation_basics/src/: main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt
firstLibCall/src/: main.cpp
lab4Class/: CMakeLists.txt
lab4Class/include/: FunkcjaKwadratowa.h  Kula.h  Prostopadloscian.h  Student.h
lab4Class/src/: FunkcjaKwadratowa.cpp  Kula.cpp  Prostopadloscian.cpp  Student.cpp  main.cpp
lab4Constructor/: CMakeLists.txt
lab4Constructor/include/: Figura.h  Punkt.h
lab4Constructor/src/: Figura.cpp  Punkt.cpp  main.cpp
lab4Destructor/: CMakeLists.txt
lab4Destructor/include/: Test.h
lab4Destructor/src/: Test.cpp  main.cpp
lab4Struct/: CMakeLists.txt
lab4Struct/src/: main.cpp
lab5ClassCopy/: CMakeLists.txt
lab5ClassCopy/include/: Pojazd.h
lab5ConstStatic/: CMakeLists.txt
lab6FriendFunctions/: CMakeLists.txt
lab6OperatorOverloading/: CMakeLists.txt
lab7Inheritance/: CMakeLists.txt
lab7Polymorphism/: CMakeLists.txt
matrixApp/: CMakeLists.txt
matrixLib/: CMakeLists.txt
simple_calculator/: CMakeLists.txt
(+27 files in other folders)
