cmake_minimum_required(VERSION 3.16)

project(JiPP2)

add_subdirectory(allocation_basics)
add_subdirectory(simple_calculator)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)

add_subdirectory(matrixLib)
add_subdirectory(matrixApp)

add_subdirectory(lab4Struct)
add_subdirectory(lab4Class)
add_subdirectory(lab4Constructor)
add_subdirectory(lab4Destructor)

add_subdirectory(lab5ClassCopy)
add_subdirectory(lab5ConstStatic)

add_subdirectory(lab6FriendFunctions)
add_subdirectory(lab6OperatorOverloading)

add_subdirectory(lab7Inheritance)
add_subdirectory(lab7Polymorphism)

add_subdirectory(FinalProject)
